force-app/main/default/objects/CommandGrammar__c/CommandGrammar__c.object-meta.xml
<CustomObject>
    <label>Command Grammar</label>
    <nameField>
        <displayFormat>VCG-{0000000000}</displayFormat>
        <label>CommandGrammar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Command Grammars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>