force-app/main/default/objects/CommandGrammar__c/fields/ActionablePhrase__c.field-meta.xml
<CustomField>
    <fullName>ActionablePhrase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actionable Phrase</label>
    <referenceTo>ActionablePhrase__c</referenceTo>
    <relationshipLabel>Command Grammars</relationshipLabel>
    <relationshipName>ActionablePhrases</relationshipName>
    <type>Lookup</type>
</CustomField>