force-app/main/default/objects/CommandGrammar__c/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <referenceTo>Command__c</referenceTo>
    <relationshipName>GrammarCommands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>