force-app/main/default/objects/CommandGrammar__c/fields/Grammar__c.field-meta.xml
<CustomField>
    <fullName>Grammar__c</fullName>
    <label>Grammar</label>
    <referenceTo>Grammar__c</referenceTo>
    <relationshipLabel>Command Grammars</relationshipLabel>
    <relationshipName>CommandGrammars</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>