force-app/main/default/objects/CommandGrammar__c/fields/PhraseIndex__c.field-meta.xml
<CustomField>
    <fullName>PhraseIndex__c</fullName>
    <label>Phrase Index</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>